@@ -101,9 +101,6 @@ ArgParser::parseClientArgs(lib::synergy::ClientArgs& args, int argc, const char*
             ++i;
             continue;
         }
-        else if (isArg(i, argc, argv, nullptr, "--sync-language")) {
-            argsBase().m_enableLangSync = true;
-        }
         else if (isArg(i, argc, argv, nullptr, "--camp")) {
             // ignore -- included for backwards compatibility
         }
