@@ -20,6 +20,7 @@ Bug fixes:
 - #7010 Fix Ubuntu 16.04 pipeline in Azure
 - #7011 Fix language synchronisation checkbox spelling
 - #7013 Wrong connection pop up appears if the user connects using a domain name which is assigned to list of IP's
+- #7014 Temporary disable language sync logic
 
 Enhancements:
 - #6954 Move language selection to advanced section
